Fix Blockquote plugin's overflow

--- a/css/plugins/blockquote.less
+++ b/css/plugins/blockquote.less
@@ -2,7 +2,7 @@
 
 .dokuwiki blockquote.blockquote-plugin {
   /* prevent blockquote to interfere with ToC when there's one */
-  overflow: hidden;
+  overflow: hidden !important;
   /* Mixture style (centered) */
   margin: 0 auto @ini_spacer auto !important;
   /* Mixture style (more compact) */
